# anchorvault-casper

./: .env.example  .gitignore  AnchorVault_Twitter_Growth_Plan.txt  Cargo.toml  README.md  anchorvault_pitch_deck_text.txt  casper_network.md  deploy.js  eslint.config.js  final_submission.txt  funding_application.txt  generate_anchorvault_launch_video.py  generate_casper_keys.cjs  generate_pdf.cjs  image_generation_prompts.txt  index.html  initialize.js  marketing_campaign_detailed.txt  marketing_prompts.txt  mint_usdc.js  package-lock.json  package.json  pitch_deck_text.txt  project_submission.html  scratch_fix.js  setup_keys.js  submission_form.md  tailwind.config.js  test_rpc.cjs  vercel.json  vite.config.ts
contracts/anchor_registry/: Cargo.toml
contracts/anchor_vault/: Cargo.toml
contracts/anchor_vault/src/: lib.rs
contracts/vault_token/: Cargo.toml
docs/: architecture.mdx  introduction.mdx  mint.json  quickstart.mdx
docs/api-reference/: introduction.mdx  registry-functions.mdx  token-functions.mdx  vault-functions.mdx  view-functions.mdx
docs/concepts/: corridor-pools.mdx  insurance-fund.mdx  liquidity-providers.mdx  payment-anchors.mdx  reputation-system.mdx  yield-model.mdx
docs/contracts/: overview.mdx  (+3 more)
markating/: Marketing Budget & KPIs - AnchorVault.xlsx  Marketing Budget & KPIs Template - [Company Name, Date] (1).xlsx
public/: robots.txt  sitemap.xml
src/: App.css  App.tsx  index.css  main.tsx
twitter-agent/: .gitignore  ai.js  article_campaign.js  campaign.js  index.js  massive_campaign.js  package-lock.json  package.json  twitter.js
(+20 files in other folders)
