[package]
name = "anchor_vault"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-contract = { version = "3.0.0", default-features = false }
casper-types = "3.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"
lto = true
codegen-units = 1
